--- a/1.html
+++ b/1.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>LKPD 1 Muhaimin</title>
+    <title>LKPD 1 Rizky</title>
 </head>
 <body>
     
     <script>
 
-        let nama = "Muhaimin";
+        let nama = "Rizky";
         document.write("Halo, nama saya " + nama );
 
         let umur = prompt("masukan umur?");
